--- a/heima-leadnews-common/pom.xml
+++ b/heima-leadnews-common/pom.xml
@@ -138,5 +138,11 @@
             <artifactId>springfox-swagger-ui</artifactId>
         </dependency>
 
+        <!--swagger的plus版本-->
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-spring-boot-starter</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
