--- a/heima-leadnews-service/pom.xml
+++ b/heima-leadnews-service/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>heima-leadnews-user</module>
         <module>heima-leadnews-articcle</module>
+        <module>heima-leadnews-wemedia</module>
     </modules>
 
     <properties>
