--- a/heima-leadnews-service/heima-leadnews-wemedia/pom.xml
+++ b/heima-leadnews-service/heima-leadnews-wemedia/pom.xml
@@ -16,4 +16,13 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <!--MinIO分布式文件系统-->
+        <dependency>
+            <groupId>com.heima</groupId>
+            <artifactId>heima-file-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 </project>
