--- a/heima-leadnews-gateway/heima-leadnews-wemedia-gateway/pom.xml
+++ b/heima-leadnews-gateway/heima-leadnews-wemedia-gateway/pom.xml
@@ -10,6 +10,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>heima-leadnews-wemedia-gateway</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-extension</artifactId>
+            <version>3.4.1</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
