--- a/heima-leadnews-service/heima-leadnews-wemedia/src/main/resources/bootstrap.yml
+++ b/heima-leadnews-service/heima-leadnews-wemedia/src/main/resources/bootstrap.yml
@@ -10,3 +10,8 @@ spring:
       config:
         server-addr: 192.168.23.133:8848
         file-extension: yml
+
+# OCR技术的文件路径
+tess4j:
+  data-path: D:\Hmtt\OCR
+  language: chi_sim
