--- a/heima-leadnews-service/pom.xml
+++ b/heima-leadnews-service/pom.xml
@@ -15,6 +15,7 @@
         <module>heima-leadnews-user</module>
         <module>heima-leadnews-articcle</module>
         <module>heima-leadnews-wemedia</module>
+        <module>heima-leadnews-schedule</module>
     </modules>
 
     <properties>
