--- a/heima-leadnews-service/heima-leadnews-schedule/src/main/resources/bootstrap.yml
+++ b/heima-leadnews-service/heima-leadnews-schedule/src/main/resources/bootstrap.yml
@@ -1,5 +1,7 @@
 server:
   port: 51701
+# 意思是：51701是默认的端口号。之后，如果有其他的端口号，开启多台服务器，可以再启动的时候，通过命令行参数，指定端口号。
+#  port: ${server.port:51701}
 spring:
   application:
     name: leadnews-schedule
