--- a/heima-leadnews-utils/pom.xml
+++ b/heima-leadnews-utils/pom.xml
@@ -48,6 +48,18 @@
             <version>1.9.3</version>
         </dependency>
         <!--poi-->
+
+        <!--protostuff分布式的序列化对象的框架，代替 fastJson-->
+        <dependency>
+            <groupId>io.protostuff</groupId>
+            <artifactId>protostuff-core</artifactId>
+            <version>1.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.protostuff</groupId>
+            <artifactId>protostuff-runtime</artifactId>
+            <version>1.6.0</version>
+        </dependency>
     </dependencies>
 
     <properties>
