--- a/heima-leadnews-test/pom.xml
+++ b/heima-leadnews-test/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>freemarker-demo</module>
         <module>minio-demo</module>
+        <module>kafka-demo</module>
     </modules>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
