--- a/heima-leadnews-service/pom.xml
+++ b/heima-leadnews-service/pom.xml
@@ -17,6 +17,7 @@
         <module>heima-leadnews-wemedia</module>
         <module>heima-leadnews-schedule</module>
         <module>heima-leadnews-search</module>
+        <module>heima-leadnews-behavior</module>
     </modules>
 
     <properties>
